--- a/templates/index.html
+++ b/templates/index.html
@@ -13,21 +13,21 @@
     <!-- Open Graph Tags -->
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Unicorn Meat">
+    <meta property="og:title" content="Unicorn Meat 🍖">
     <meta property="og:description"
         content="A magical coin made by Ethereum in March 2016. Now wrapped and revived.">
-    <meta property="og:url" content="">
-    <meta property="og:site_name" content="Unicorn Meat">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://unicornmeateth.com">
+    <meta property="og:site_name" content="Unicorn Meat 🍖">
+    <meta property="og:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
     <meta property="og:image:width" content="1180">
     <meta property="og:image:height" content="600">
     <meta property="og:image:type" content="image/png">
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Unicorn Meat">
+    <meta name="twitter:title" content="Unicorn Meat 🍖">
     <meta name="twitter:description"
         content="A magical coin made by Ethereum in March 2016. Now wrapped and revived.">
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
     <!-- preload head styles -->
     <link rel="preload" href="{{ url_for('static', filename='assets/css/unicons.min.css') }}" as="style">
     <link rel="preload" href="{{ url_for('static', filename='assets/css/swiper-bundle.min.css') }}" as="style">
