add the wrapper contract

--- a/templates/index.html
+++ b/templates/index.html
@@ -319,22 +319,16 @@
                                                 mintable historic meme relic now has a finite supply and is wrapped to
                                                 be tradable and owned by anyone!
                                             </p>
-                                            <!-- <p class="fs-6 sm:fs-5 xl:fs-4">
-                                                  <a href="https://gist.github.com/alexvandesande/eca0b87da89ab28fa50c" target="_blank" rel="noopener noreferrer">Unicorn Meat Contract</a> | <a href="https://etherscan.io/tx/0x6b81d8c6884728563e1bcb839f81d716bcf0c2d3b7d8ce6c2f6e4bf95704a0d5" target="_blank" rel="noopener noreferrer">Wrapped Unicorn Meat Contract</a>
-                                                </p> -->
                                         </div>
                                         <div class="buttons hstack justify-center gap-2 xl:gap-3">
                                             <a class="btn btn-md xl:btn-2xl btn-secondary px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
-                                                href="https://etherscan.io/tx/0x6b81d8c6884728563e1bcb839f81d716bcf0c2d3b7d8ce6c2f6e4bf95704a0d5">
-                                                <span>Unicorn Meat Contract</span>
+                                                href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
+                                                <span>🍖 Contract</span>
                                             </a>
                                             <a class="btn btn-md xl:btn-2xl btn-primary-200 px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
-                                                href="https://etherscan.io/tx/0x6b81d8c6884728563e1bcb839f81d716bcf0c2d3b7d8ce6c2f6e4bf95704a0d5">
-                                                <span>Wrapped Unicorn Meat Contract</span>
+                                                href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
+                                                <span>w🍖 Contract</span>
                                             </a>
-                                            <!-- <a class="btn btn-primary-200 w-48px h-48px xl:w-64px xl:h-64px border border-2 border-black contrast-shadow-sm hover:-rotate-2" href="https://gist.github.com/alexvandesande/eca0b87da89ab28fa50c">
-                                                    <i class="icon-2 xl:icon-3 unicon-send-alt"></i>
-                                                </a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -931,12 +925,12 @@
                         <div class="panel p-3 border border-2 border-black contrast-shadow-sm bg-white text-center">
                             <ul class="vstack gap-2 list-unstyled m-0">
                                 <li>
-                                    <a href="https://etherscan.io/address/0x123..." target="_blank"
+                                    <a href="https://etherscan.io/address/0xED6aC8de7c7CA7e3A22952e09C2a2A1232DDef9A" target="_blank"
                                         class="fw-semibold text-primary" style="text-decoration: underline;">Unicorn
                                         Meat Contract</a>
                                 </li>
                                 <li>
-                                    <a href="https://etherscan.io/address/0x456..." target="_blank"
+                                    <a href="https://etherscan.io/address/0x079F59C3395cc2f8CF68408FC1244398630E5F1D" target="_blank"
                                         class="fw-semibold text-primary" style="text-decoration: underline;">Wrapped
                                         Unicorn Meat Contract</a>
                                 </li>
