fix about buttons for mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -323,11 +323,11 @@
                                         <div class="buttons hstack justify-center gap-2 xl:gap-3">
                                             <a class="btn btn-md xl:btn-2xl btn-secondary px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
                                                 href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
-                                                <span>🍖 Contract</span>
+                                                <span class="fs-6 sm:fs-5 xl:fs-4">🍖 Contract</span>
                                             </a>
                                             <a class="btn btn-md xl:btn-2xl btn-primary-200 px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
                                                 href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
-                                                <span>w🍖 Contract</span>
+                                                <span class="fs-6 sm:fs-5 xl:fs-4">w🍖 Contract</span>
                                             </a>
                                         </div>
                                     </div>
