fix contract links

--- a/templates/index.html
+++ b/templates/index.html
@@ -300,7 +300,7 @@
                                                     href="https://gist.github.com/alexvandesande/eca0b87da89ab28fa50c"
                                                     target="_blank" rel="noopener noreferrer">devised what was conveyed
                                                     as an April Fool's joke</a> – a <a
-                                                    href='https://etherscan.io/token/0xED6aC8de7c7CA7e3A22952e09C2a2A1232DDef9A'>Unicorn
+                                                    href='https://etherscan.io/token/0xED6aC8de7c7CA7e3A22952e09C2a2A1232DDef9A' target="_blank" rel="noopener noreferrer">Unicorn
                                                     Meat token</a> and a <a
                                                     href="https://etherscan.io/address/0xc7e9dDd5358e08417b1C88ed6f1a73149BEeaa32"
                                                     target="_blank" rel="noopener noreferrer">Unicorn Meat Grinder
@@ -322,11 +322,11 @@
                                         </div>
                                         <div class="buttons hstack justify-center gap-2 xl:gap-3">
                                             <a class="btn btn-md xl:btn-2xl btn-secondary px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
-                                                href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
+                                                href="https://etherscan.io/address/0xED6aC8de7c7CA7e3A22952e09C2a2A1232DDef9A" target="_blank" rel="noopener noreferrer">
                                                 <span class="fs-6 sm:fs-5 xl:fs-4">🍖 Contract</span>
                                             </a>
                                             <a class="btn btn-md xl:btn-2xl btn-primary-200 px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
-                                                href="https://etherscan.io/tx/0x079F59C3395cc2f8CF68408FC1244398630E5F1D">
+                                                href="https://etherscan.io/address/0x079f59c3395cc2f8cf68408fc1244398630e5f1d" target="_blank" rel="noopener noreferrer">
                                                 <span class="fs-6 sm:fs-5 xl:fs-4">w🍖 Contract</span>
                                             </a>
                                         </div>
@@ -424,30 +424,11 @@
                                                     <h5 class="h7 sm:h6 xl:h5 m-0 ft-primary fw-semibold">10% Team</h5>
                                                 </div>
                                             </div>
-                                            <!-- <div>
-                                                <div class="p-2 xl:p-3 border border-2 border-black contrast-shadow-sm text-black -rotate-1"
-                                                    style="background-color: #dbf2ff">
-                                                    <h5 class="h7 sm:h6 xl:h5 m-0 ft-primary fw-semibold">10% Liquidity
-                                                        Reserves</h5>
-                                                </div>
-                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="section-footer mt-6 sm:mt-8 lg:mt-9 xl:mt-10 text-center" data-anime="onview: -200; translateY: [24, 0]; opacity: [0, 1]; delay: 200;">
-                                <div class="row child-cols-6 justify-center g-0">
-                                    <div>
-                                        <h2 class="h2 sm:h1 xl:display-6 stroke-text-bold mb-1 xl:mb-2">0%</h2>
-                                        <span class="fs-6 sm:fs-5 xl:fs-4">Buy Tax</span>
-                                    </div>
-                                    <div>
-                                        <h2 class="h2 sm:h1 xl:display-6 stroke-text-bold mb-1 xl:mb-2">0%</h2>
-                                        <span class="fs-6 sm:fs-5 xl:fs-4">Sell Tax</span>
-                                    </div>
-                                </div>
-                            </div> -->
                     </div>
                 </div>
             </div>
