describe claim in the future

--- a/templates/index.html
+++ b/templates/index.html
@@ -706,7 +706,7 @@
                                         "Grind" a Unicorn</h3>
 
                                 </div>
-                                <p class="fs-6 xl:fs-5 mb-3 w-100" style="margin-left: auto; margin-right: auto;">Did you know that the original Unicorn Meat Grinder didn't actually grind Unicorns? It simply sent the Unicorn to the Unicorn Meat Grinder Association and could be taken by anyone. We think you should have your cake and eat it too, so now you can claim 1,000 Unicorn Meat without harming mythical creatures.</p><br>
+                                <p class="fs-6 xl:fs-5 mb-3 w-100" style="margin-left: auto; margin-right: auto;">Did you know that the original Unicorn Meat Grinder didn't actually grind Unicorns? It simply sent the Unicorn to the Unicorn Meat Grinder Association and could be taken by anyone. We think you should have your cake and eat it too, so soon you will be able to claim 1,000 Unicorn Meat without harming mythical creatures.</p><br>
                                 <input id="wrap-unwrap-amount" type="number" min="0" step="any"
                                     class="form-control h-48px xl:h-64px fs-6 xl:fs-4 border border-2 border-black contrast-shadow-sm text-black bg-white text-center mb-3"
                                     placeholder="Enter amount" required
