--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,9 @@
                     <li>
                         <a class="w-32px hover:-rotate-3" href="#" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #5865f2; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
                     </li>
+                    <li>
+                        <a class="w-32px hover:-rotate-3" href="mailto:unicornmeateth@outlook.com" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -223,6 +226,9 @@
                                     </li>
                                     <li>
                                         <a class="hover:-rotate-3 transition-transform duration-200" href="#" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
+                                    </li>
+                                    <li>
+                                        <a class="hover:-rotate-3 transition-transform duration-200" href="mailto:unicornmeateth@outlook.com" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
                                     </li>
                                 </ul>
                             </div>
