--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
                         <a class="w-32px hover:-rotate-3" href="#" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #5865f2; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
                     </li>
                     <li>
-                        <a class="w-32px hover:-rotate-3" href="mailto:unicornmeateth@outlook.com" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
+                        <a class="w-32px hover:-rotate-3" href="mailto:team@unicornmeateth.com" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
                     </li>
                 </ul>
             </div>
@@ -228,7 +228,7 @@
                                         <a class="hover:-rotate-3 transition-transform duration-200" href="#" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
                                     </li>
                                     <li>
-                                        <a class="hover:-rotate-3 transition-transform duration-200" href="mailto:unicornmeateth@outlook.com" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
+                                        <a class="hover:-rotate-3 transition-transform duration-200" href="mailto:team@unicornmeateth.com" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
                                     </li>
                                 </ul>
                             </div>
