remove wrapper for now

--- a/templates/index.html
+++ b/templates/index.html
@@ -332,7 +332,7 @@
                                                 <span class="fs-6 sm:fs-5 xl:fs-4">🍖 Contract</span>
                                             </a>
                                             <a class="btn btn-md xl:btn-2xl btn-primary-200 px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
-                                                href="https://etherscan.io/address/0xa7da0FedbCb5371AAaF94F97a9DEF3347F816eB9" target="_blank" rel="noopener noreferrer">
+                                                href="#" data-bs-toggle="modal" data-bs-target="#magicFeaturesModal">
                                                 <span class="fs-6 sm:fs-5 xl:fs-4">w🍖 Contract</span>
                                             </a>
                                         </div>
@@ -903,7 +903,7 @@
                                         Meat Contract</a>
                                 </li>
                                 <li>
-                                    <a href="https://etherscan.io/address/0xa7da0FedbCb5371AAaF94F97a9DEF3347F816eB9" target="_blank"
+                                    <a href="#" data-bs-toggle="modal" data-bs-target="#magicFeaturesModal"
                                         class="fw-semibold text-primary" style="text-decoration: underline;">Wrapped
                                         Unicorn Meat Contract</a>
                                 </li>
