--- a/templates/index.html
+++ b/templates/index.html
@@ -94,12 +94,12 @@
         <div
             class="uc-offcanvas-bar m-1 rounded-2 border border-2 border-black contrast-shadow-md bg-secondary-200 text-dark dark:bg-gray-900 dark:text-white">
             <header class="uc-offcanvas-header hstack justify-between items-center pb-2">
-                <div class="uc-logo">
-                    <a href="{{ url_for('index') }}" class="h5 text-none text-gray-900 dark:text-white">
-                        <img class="w-40px" src="{{ url_for('static', filename='assets/images/home-two/logo.png') }}"
-                            alt="Unicorn Meat">
-                    </a>
-                </div>
+                                    <div class="uc-logo">
+                        <a href="{{ url_for('index') }}" class="h5 text-none text-gray-900 dark:text-white">
+                            <img class="w-40px" src="{{ url_for('static', filename='assets/images/home-two/unicornmeat-logo.png') }}"
+                                alt="Unicorn Meat" style="filter: drop-shadow(-4px 0px 8px rgba(0,0,0,0.3));">
+                        </a>
+                    </div>
                 <button
                     class="uc-offcanvas-close rtl:end-auto rtl:start-0 m-1 mt-2 p-0 btn border-0 dark:text-white dark:text-opacity-50 hover:text-primary hover:rotate-90 duration-150 transition-all"
                     type="button">
@@ -157,8 +157,8 @@
                         <div class="uc-navbar-left">
                             <div class="uc-logo">
                                 <a class="panel text-none w-150px xl:w-auto" href="#">
-                                    <img src="{{ url_for('static', filename='assets/images/home-two/logo.png') }}"
-                                        alt="Unicorn Meat Logo" style="height: 40px; width: auto;">
+                                    <img src="{{ url_for('static', filename='assets/images/home-two/unicornmeat-logo.png') }}"
+                                        alt="Unicorn Meat Logo" style="height: 40px; width: auto; filter: drop-shadow(-4px 0px 8px rgba(0,0,0,0.3));">
                                 </a>
                             </div>
                         </div>
@@ -203,8 +203,8 @@
                         <div class="panel vstack items-center gap-2 lg:gap-3 xl:gap-4 max-w-md mx-auto text-center px-2 lg:px-0 mt-6 lg:mt-8 xl:mt-9"
                             data-uc-height-viewport="media: @xl;"
                             data-anime="targets: >*; translateY: [24, 0]; opacity: [0, 1]; delay: anime.stagger(100, {start: 200});">
-                            <img src="{{ url_for('static', filename='assets/images/home-two/um_1_coin.png') }}"
-                                alt="Unicorn Meat Logo" style="max-width: 200px; height: auto;">
+                            <img src="{{ url_for('static', filename='assets/images/home-two/unicornmeat-logo.png') }}"
+                                alt="Unicorn Meat Logo" style="max-width: 200px; height: auto; filter: drop-shadow(-8px 0px 16px rgba(0,0,0,0.3));">
                             <h1 class="h2 xl:h1 mb-0 ls-0">
                                 Unicorn Meat 🍖 <br class="d-none sm:d-block">
                             </h1>
