--- a/templates/index.html
+++ b/templates/index.html
@@ -119,13 +119,10 @@
                 </ul>
                 <ul class="nav-x gap-1 mt-4">
                     <li>
-                        <a class="w-32px hover:-rotate-3" href="#" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #000; text-decoration: none;"><i class="fab fa-x-twitter" style="display: inline-block;"></i></a>
+                        <a class="w-32px hover:-rotate-3" href="https://x.com/UnicornMeatETH" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #000; text-decoration: none;"><i class="fab fa-x-twitter" style="display: inline-block;"></i></a>
                     </li>
                     <li>
-                        <a class="w-32px hover:-rotate-3" href="#" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #0088cc; text-decoration: none;"><i class="fab fa-telegram" style="display: inline-block;"></i></a>
-                    </li>
-                    <li>
-                        <a class="w-32px hover:-rotate-3" href="#" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #5865f2; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
+                        <a class="w-32px hover:-rotate-3" href="https://t.me/+7mQHRxHqG91mMjVh" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #0088cc; text-decoration: none;"><i class="fab fa-telegram" style="display: inline-block;"></i></a>
                     </li>
                     <li>
                         <a class="w-32px hover:-rotate-3" href="mailto:team@unicornmeateth.com" style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
@@ -219,13 +216,10 @@
                             <div class="mt-4">
                                 <ul class="nav-x gap-3 justify-center">
                                     <li>
-                                        <a class="hover:-rotate-3 transition-transform duration-200" href="#" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-x-twitter" style="display: inline-block;"></i></a>
+                                        <a class="hover:-rotate-3 transition-transform duration-200" href="https://x.com/UnicornMeatETH" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-x-twitter" style="display: inline-block;"></i></a>
                                     </li>
                                     <li>
-                                        <a class="hover:-rotate-3 transition-transform duration-200" href="#" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-telegram" style="display: inline-block;"></i></a>
-                                    </li>
-                                    <li>
-                                        <a class="hover:-rotate-3 transition-transform duration-200" href="#" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-discord" style="display: inline-block;"></i></a>
+                                        <a class="hover:-rotate-3 transition-transform duration-200" href="https://t.me/+7mQHRxHqG91mMjVh" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fab fa-telegram" style="display: inline-block;"></i></a>
                                     </li>
                                     <li>
                                         <a class="hover:-rotate-3 transition-transform duration-200" href="mailto:team@unicornmeateth.com" style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i class="fas fa-envelope" style="display: inline-block;"></i></a>
