--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
                                 class="fab fa-x-twitter" style="display: inline-block;"></i></a>
                     </li>
                     <li>
-                        <a class="w-32px hover:-rotate-3" href="https://t.me/+7mQHRxHqG91mMjVh"
+                        <a class="w-32px hover:-rotate-3" href="https://t.me/UnicornMeatETH"
                             style="font-size: 24px; display: flex; align-items: center; justify-content: center; color: #0088cc; text-decoration: none;"><i
                                 class="fab fa-telegram" style="display: inline-block;"></i></a>
                     </li>
@@ -233,7 +233,7 @@
                                     </li>
                                     <li>
                                         <a class="hover:-rotate-3 transition-transform duration-200"
-                                            href="https://t.me/+7mQHRxHqG91mMjVh"
+                                            href="https://t.me/UnicornMeatETH"
                                             style="font-size: 28px; color: #6E1E71; text-decoration: none;"><i
                                                 class="fab fa-telegram" style="display: inline-block;"></i></a>
                                     </li>
