add base contract

--- a/templates/index.html
+++ b/templates/index.html
@@ -359,6 +359,12 @@
                                                 target="_blank" rel="noopener noreferrer">
                                                 <span class="fs-6 sm:fs-5 xl:fs-4">w🍖 Contract</span>
                                             </a>
+                                            <a class="btn btn-md xl:btn-2xl px-3 border border-2 border-black contrast-shadow-sm hover:-rotate-2"
+                                                href="https://basescan.org/address/0xa0ff877E3d4f3a108B1B3d5eB3e4369301D2b2D7"
+                                                target="_blank" rel="noopener noreferrer"
+                                                style="background-color: #e6f0ff; color: #1A63FF;">
+                                                <span class="fs-6 sm:fs-5 xl:fs-4">w🍖 Base Contract</span>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
